--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ video {
 
 .button {
     padding: 1px 10px;
-    -webkit-appearance: button;
     color: initial;
-    -moz-appearance: button;
-    -webkit-appearance: button;
     text-decoration: none;
+}
+
+button {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
 .image {
