--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ button {
   flex: 50.0%;
 }
 
+@media only screen and (max-width: 600px) {
+  #sidebar {
+    padding-block-end: 50px;
+  }
+}
+
 .compatibility {
   font-family: 'Roboto', sans-serif;
   font-size: large;
